@@ -24,7 +24,7 @@ connect()
 	# If this device has a dial script we use it to bring up
 	# the physical link.
 	if [ -n "$dial_script"  -a "$dial_script" != '-' ]; then
-		"$CFG_SCRIPTS/$dial_script"
+		"$CFG_SCRIPTS/device/$dial_script"
 		status=$?
 		if [ $status -ne 0 ]; then
 			exit $status
