@@ -1,0 +1,4 @@
+#!/bin/sh
+
+/sbin/isdnctrl eaz "$DIALD_DEVICE" "$EAZ_IN"
+/sbin/isdnctrl hangup "$DIALD_DEVICE"
