@@ -8,5 +8,6 @@
 /dev/ttyS0	modem/generic
 /dev/ttyS1	modem/generic
 modem		modem/generic
+ethernet	dhcp
 ippp		isdn
 isdn		isdn
