@@ -35,4 +35,4 @@ connect-timeout	600
 retry-count	3
 connect		"/usr/share/diald/connect"
 
-include		"/usr/share/diald/filter/standard"
+include		"/usr/share/diald/standard.filter"
