@@ -1,166 +1,0 @@
-# This is a pretty complicated set of filter rules.
-# (These are the rules I use myself.)
-#
-# I've divided the rules up into five sections.
-# TCP packets, UDP packets, IGMP, ICMP packets and a general catch all rule
-# at the end.
-
-
-#------------------------------------------------------------------------------
-# Rules for TCP packets.
-#------------------------------------------------------------------------------
-# General comments on the rule set:
-#
-# In general we would like to treat only data on a TCP link as signficant
-# for timeouts. Therefore, we try to ignore packets with no data.
-# Since the shortest possible set of headers in a TCP/IP packet is 40 bytes.
-# Any packet with length 40 must have no data riding in it.
-# We may miss some empty packets this way (optional routing information
-# and other extras may be present in the IP header), but we should get
-# most of them. Note that we don't want to filter out packets with
-# tcp.live clear, since we use them later to speedup disconnects
-# on some TCP links.
-#
-# We also want to make sure WWW packets live even if the TCP socket
-# is shut down. We do this because WWW doesn't keep connections open
-# once the data has been transfered, and it would be annoying to have the link
-# keep bouncing up and down every time you get a document.
-#
-# Outside of WWW the most common use of TCP is for long lived connections,
-# that once they are gone mean we no longer need the network connection.
-# We don't neccessarily want to wait 10 minutes for the connection
-# to go down when we don't have any telnet's or rlogin's running,
-# so we want to speed up the timeout on TCP connections that have
-# shutdown. We do this by catching packets that do not have the live flag set.
-
-# --- start of rule set proper ---
-
-# When initiating a connection we only give the link 15 seconds initially.
-# The idea here is to deal with possibility that the network on the opposite
-# end of the connection is unreachable. In this case you don't really
-# want to give the link 10 minutes up time. With the rule below
-# we only give the link 15 seconds initially. If the network is reachable
-# then we will normally get a response that actually contains some
-# data within 15 seconds. If this causes problems because you have a slow
-# response time at some site you want to regularly access, you can either
-# increase the timeout or remove this rule.
-accept tcp 15 tcp.syn
-
-# Keep named xfers from holding the link up
-ignore tcp tcp.dest=tcp.domain
-ignore tcp tcp.source=tcp.domain
-
-# (Ack! SCO telnet starts by sending empty SYNs and only opens the
-# connection if it gets a response. Sheesh..)
-accept tcp 5 ip.tot_len=40,tcp.syn
-
-# keep empty packets from holding the link up (other than empty SYN packets)
-ignore tcp ip.tot_len=40,tcp.live
-
-# make sure http transfers hold the link for 2 minutes, even after they end.
-# NOTE: Your /etc/services may not define the tcp service www, in which
-# case you should comment out the following two lines or get a more
-# up to date /etc/services file. See the FAQ for information on obtaining
-# a new /etc/services file.
-accept tcp 120 tcp.dest=tcp.www
-accept tcp 120 tcp.source=tcp.www
-
-# SSL connections are usually for secure http so treat them like http.
-# NOTE: Your /etc/services may not define the tcp service https, in which
-# case you should comment out the following two lines or get a more
-# up to date /etc/services file. See the FAQ for information on obtaining
-# a new /etc/services file.
-keepup tcp 120 tcp.dest=tcp.https
-keepup tcp 120 tcp.source=tcp.https
-
-# Once the link is no longer live, we try to shut down the connection
-# quickly. Note that if the link is already down, a state change
-# will not bring it back up.
-keepup tcp 5 !tcp.live
-ignore tcp !tcp.live
-
-# an ftp-data or ftp connection can be expected to show reasonably frequent
-# traffic.
-accept tcp 120 tcp.dest=tcp.ftp
-accept tcp 120 tcp.source=tcp.ftp
-
-#NOTE: ftp-data is not defined in the /etc/services file provided with
-# the latest versions of NETKIT, so I've got this commented out here.
-# If you want to define it add the following line to your /etc/services:
-# ftp-data        20/tcp
-# and uncomment the following two rules.
-#accept tcp 120 tcp.dest=tcp.ftp-data
-#accept tcp 120 tcp.source=tcp.ftp-data
-
-# If we don't catch it above, give the link 10 minutes up time.
-accept tcp 600 any
-
-
-# Rules for UDP packets
-#
-# We time out domain requests right away, we just want them to bring
-# the link up, not keep it around for very long.
-# This is because the network will usually come up on a call
-# from the resolver library (unless you have all your commonly
-# used addresses in /etc/hosts, in which case you will discover
-# other problems.)
-# Note that you should not make the timeout shorter than the time you
-# might expect your DNS server to take to respond. Otherwise
-# when the initial link gets established there might be a delay
-# greater than this between the initial series of packets before
-# any packets that keep the link up longer pass over the link.
-
-# Don't bring the link up for rwho.
-ignore udp udp.dest=udp.who
-ignore udp udp.source=udp.who
-# Don't bring the link up for RIP.
-ignore udp udp.dest=udp.router
-ignore udp udp.source=udp.router
-# Don't bring the link up for NTP or timed.
-ignore udp udp.dest=udp.ntp
-ignore udp udp.source=udp.ntp
-ignore udp udp.dest=udp.timed
-ignore udp udp.source=udp.timed
-# Don't bring up on domain name requests between two running nameds.
-ignore udp udp.dest=udp.domain,udp.source=udp.domain
-# Bring up the network whenever we make a domain request from someplace
-# other than named.
-accept udp 30 udp.dest=udp.domain 
-accept udp 30 udp.source=udp.domain
-# Do the same for netbios-ns broadcasts
-# NOTE: your /etc/services file may not define the netbios-ns service
-# in which case you should comment out the next three lines.
-ignore udp udp.source=udp.netbios-ns,udp.dest=udp.netbios-ns
-accept udp 30 udp.dest=udp.netbios-ns
-accept udp 30 udp.source=udp.netbios-ns
-# Anything else gets 2 minutes.
-accept udp 120 any
-
-
-# Rules for IGMP packets
-
-# Bring the link up for mtrace requests.
-accept igmp 10 igmp.vertype=IGMP_MTRACE
-
-# Bring the link up for new membership reports.
-accept igmp 10 igmp.vertype=IGMP_HOST_NEW_MEMBERSHIP_REPORT
-
-# All other IGMP packets are ignored but listed in the connection
-# queue for 5 seconds.
-ignore igmp 0:5 any
-
-
-# Rules for ICMP/ICMP6 packets
-
-# Bring the link up for ICMP echo requests.
-# Some may want to disable this...
-accept icmp 5 icmp.type=ICMP_ECHO
-accept icmp 5 icmp6.type=ICMP6_ECHO_REQUEST
-
-
-# Ignore some background protocols.
-ignore ospfigp any
-
-# Catch any packets that we didn't catch above and give the connection
-# 30 seconds of live time.
-accept any 30 any
